--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Dynamic Quote Generator</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div id="quote-app">
+        <h1>Quote of the Day</h1>
+        <div id="quote-display">Your quote will appear here.</div>
+        <button id="new-quote-btn">Show New Quote</button>
+        <div id="add-quote-form">
+            <h2>Add a New Quote</h2>
+            <input type="text" id="new-quote-text" placeholder="Enter quote text">
+            <input type="text" id="new-quote-category" placeholder="Enter quote category">
+            <button id="add-quote-btn">Add Quote</button>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
