--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -18,10 +18,10 @@
         </div>
         <select id="categoryFilter" onchange="filterQuotes()">
             <option value="all">All Categories</option>
-            <!-- Dynamically populated categories -->
         </select>
         <button id="export-quote-btn">Export Quotes</button>
         <input type="file" id="importfile" accept=".json">
+        <button id="sync-btn">Sync with Server</button>
     </div>
     <script src="script.js"></script>
 </body>
